--- a/11_days/index.html
+++ b/11_days/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timer count</title>
+    <title>Coder Army</title>
 </head>
-<body style="background-color: black; color: black;">
+<body style="background-color: black; color: white; font-size: larger;">
     <div id="root">
-
+        <h1 id="first" class="header1">Hello Coder Army</h1>
+        <h1 id="second" class="header1" >Topics Covered so far</h1>
+        <ul id="third" class="header2" style="background-color: orange;">
+            <li>CN</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JS</li>
+        </ul>
+        <script src="class_Work.js"></script>
     </div>
-    <script src="home_work.js"></script>
 </body>
 </html>
