--- a/18_Days/index.html
+++ b/18_Days/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astrology Insights</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="container">
         <h1>Astrology Insights</h1>
@@ -30,6 +32,8 @@
         <div class="result" id="result"></div>
     </div>
 
-    <script src="./first.js"></script>
+    <script src="./first1.js"></script>
 </body>
+
 </html>
+
