--- a/pactice/index.html
+++ b/pactice/index.html
@@ -11,23 +11,27 @@
     <div id="input">
         <form >
     <label for="Name">Member Name:</label>
-    <input type="text" id="Name" name="Name" placeholder="Enter Member Name" required>
+<select id="Name" name="Name" required>
+    <option value="" disabled selected>Select Member</option>
+    <option value="Gopal Das" >Gopal Das</option>
+    <option value="Saker Khan" >Saker Khan</option>
+    <option value="Sayan Dey" >Sayan Dey</option>
+    <option value="Sovan Jana" >Sovan Jana</option>
+    <option value="Sandipan Pal" >Sandipan Pal</option>
+    <option value="Sk Asfer" >Sk Asfer</option>
+    <option value="Mostakin Mondal" >Mostakin Mondal</option>
+</select>
     <label for="pay">Pay Amount:</label>
-    <input type="number" id="pay" name="spend" placeholder="Enter amount" required><br><br>
+    <input type="number" id="pay" name="spend" placeholder="Enter amount" min="0" ><br><br>
     <button type="submit">Submit</button>
     </form>
 </div>
 
     <h1>Bera 75</h1>
+    <h4>
+"Update coming soon... This data will cover the period from 01/08/2025 to 18/08/2025. "<br> <mark>"All members manipulate data just for fun."</mark></h4>
         <table>
-            <tr>
-                <th>Member Name</th>
-                <th>Already Pay Amount</th>
-                <th>Eat Meal Price</th>
-                <th>Meal count</th>
-                <th>Pay Other Person</th>
-                <th>You Get Amount</th>
-            </tr>
+
         </table>
       </div>
 
